# Envoy-Bot

./: .gitignore  LICENCE  README.md  architect.py  config.example.yml  main.py  pyproject.toml  requirements.txt
docs/: discord_design_guide.md
